<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenge1.Challenge1Activity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_themoviedb_api"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_top_rated_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/top_rated_movies"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_upcoming_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_movies"
        app:layout_constraintEnd_toEndOf="@+id/button_top_rated_movies"
        app:layout_constraintStart_toStartOf="@+id/button_top_rated_movies"
        app:layout_constraintTop_toBottomOf="@+id/button_top_rated_movies" />

    <Button
        android:id="@+id/button_now_playing_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/now_playing_movies"
        app:layout_constraintEnd_toEndOf="@+id/button_upcoming_movies"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_upcoming_movies"
        app:layout_constraintTop_toBottomOf="@+id/button_upcoming_movies" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/button_now_playing_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_top_rated_movies"
        app:srcCompat="@drawable/ic_themoviedb" />
</android.support.constraint.ConstraintLayout>