<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenge1.TopRatedActivity">

    <TextView
        android:id="@+id/textView5"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/top_rated_movies"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/showing_only_the_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_display_toprated_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="@dimen/space_8"
                android:text="@string/the_data_will_be_displayed_here" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:visibility="invisible"
        tools:visibility="visible"
        android:padding="@dimen/space_8"
        android:id="@+id/text_view_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/previous_page"
        android:textColor="@drawable/text_color_clicked"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_current_and_max_page"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_current_and_max_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/demo_page_x_xxx"
        app:layout_constraintEnd_toStartOf="@+id/text_view_next"
        app:layout_constraintStart_toEndOf="@+id/text_view_prev"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:padding="@dimen/space_8"
        android:textColor="@drawable/text_color_clicked"
        android:id="@+id/text_view_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/next_page"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_current_and_max_page"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_current_and_max_page" />

</android.support.constraint.ConstraintLayout>